# simple_neural_network

./: CMakeLists.txt
include/: neural_network.hpp  neuron.hpp  synapse.hpp  weights.hpp
src/: main.cpp  neural_network.cpp  weights.cpp
